force-app/main/default/objects/Campaign_Offer__c/Campaign_Offer__c.object-meta.xml
<CustomObject>
    <description>Offers linked to a Campaign to determine which Offers are available to this promotion</description>
    <label>Campaign Offer</label>
    <nameField>
        <displayFormat>Promo-{0000}</displayFormat>
        <label>Campaign Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>