force-app/main/default/objects/Campaign_Offer__c/fields/Campaign__c.field-meta.xml
<CustomField>
        <fullName>Campaign__c</fullName>
        <description>Campaign to group Offers under as a promotion.</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Offers</relationshipLabel>
        <relationshipName>Campaign_Offers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>