force-app/main/default/objects/Campaign_Offer__c/fields/Offer__c.field-meta.xml
<CustomField>
        <fullName>Offer__c</fullName>
        <description>Offer being grouped under this promotion, an Offer may be part of multiple promotions.</description>
        <label>Offer</label>
        <referenceTo>Offer__c</referenceTo>
        <relationshipLabel>Campaign Offers</relationshipLabel>
        <relationshipName>Campaign_Offers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>