force-app/main/default/objects/Campaign_Offer__c/fields/Offer_Name__c.field-meta.xml
<CustomField>
        <fullName>Offer_Name__c</fullName>
        <formula>Offer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Name</label>
        <type>Text</type>
    </CustomField>